--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-<script src="script.js"></script>
+	<div class="header">
+		<input type="text" placeholder="Input the name" name="input"  class="input">
+		<button class="button" type="submit">Search</button>
+	</div>
+	<div class="blog"></div>
+	<div class="requests"></div>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
+	<script src="script.js"></script>
 </body>
 </html>
