--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div class="header">
-		<input type="text" placeholder="Input the name" name="input"  class="input">
+		<input type="text" placeholder="Input the name" name="input" value="cat,dog"  class="input">
 		<button class="button" type="submit">Search</button>
 	</div>
 	<div class="blog"></div>
